# proj

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  install.sh
.github/workflows/: README.md  ci.yml  docs.yml  release.yml
demo/: proj-check.cast  proj-ls.cast  proj-sync.cast
docs/: README.md  docusaurus.config.ts  package-lock.json
docs/docs/: ai-checks.md  commands.md  configuration.md  getting-started.md  shell-integration.md
docs/src/components/HomepageFeatures/: index.tsx  styles.module.css
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
man/: README.md  proj.1  youssef-tools.7
plugins/oh-my-zsh/: proj.plugin.zsh
scripts/: update-man.sh
src/: cache.rs  cli.rs  config.rs  discovery.rs  fuzzy.rs  github.rs  main.rs  project.rs  stats.rs  tags.rs  ui.rs  watch.rs
src/checks/: detector.rs  docs.rs  logging.rs  mod.rs  quality.rs  runner.rs  security.rs  testing.rs
src/commands/: cd.rs  check.rs  clone.rs  completions.rs  info.rs  init.rs  list.rs  mod.rs  new_project.rs  open.rs  sync.rs
templates/: .gitignore.go  .gitignore.js  .gitignore.py
